# auto-cpufreq-rust

./: README.md  auto-cpufreq-installer  auto_cpufreq.conf.batterysaver  auto_cpufreq.conf.example  auto_cpufreq.conf.gaming  auto_cpufreq.conf.thinkpad  flake.nix
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report-or-feature-request.md
.github/workflows/: build-linux.yml  build-nix.yaml
auto-cpufreq/: Cargo.toml
auto-cpufreq/src/: core.rs  core.rs.backup  globals.rs  lib.rs  power_helper.rs  tlp_stat_parser.rs
auto-cpufreq/src/battery/: asus.rs  ideapad_acpi.rs  ideapad_laptop.rs  mod.rs  thinkpad.rs
auto-cpufreq/src/config/: config.rs  config_event_handler.rs  mod.rs
auto-cpufreq/src/gui/: app.rs  app.rs.backup  mod.rs  objects.rs  objects.rs.backup  tray.rs  yapaygavat.txt
auto-cpufreq/src/modules/: mod.rs  system_info.rs  system_monitor.rs  system_monitor.rs.backup
nix/: default.nix  module.nix  shell.nix
scripts/: 50-auto-cpufreq.rules  auto-cpufreq-gtk.desktop  auto-cpufreq.service  curl_response  org.auto-cpufreq.pkexec.policy  org.auto-cpufreq.pkexec.policy.enhanced  org.auto-cpufreq.pkexec.policy.hardened
