[package]
name = "auto-cpufreq"
version = "3.0.0-rust1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "auto-cpufreq"
path = "src/bin/auto_cpufreq.rs"

[[bin]]
name = "auto-cpufreq-gtk"
path = "src/bin/auto_cpufreq_gtk.rs"
required-features = ["gui"]

[[bin]]
name = "auto-cpufreq-tray"
path = "src/bin/auto_cpufreq_tray.rs"
required-features = ["gui"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
ini = "1.3"
lazy_static = "1.4"
notify = "6.1"
sysinfo = "0.30"
nix = { version = "0.27", features = ["user"] }
num_cpus = "1.16"
chrono = "0.4"
open = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
configparser = "1.0"

glib = { version = "0.18", optional = true }
gio = { version = "0.18", optional = true }
gtk = { version = "0.7", package = "gtk4", optional = true }
gdk = { version = "0.7", package = "gdk4", optional = true }
gdk-pixbuf = { version = "0.18", optional = true }
ksni = "0.2"

[features]
default = []
gui = ["gtk", "gdk", "gdk-pixbuf", "glib", "gio"]
