[package]
name = "auto-cpufreq"
version = "3.0.1"
edition = "2021"
authors = ["Zamanhuseyinli <zamanhuseynli23@gmail.com>", "Contributors"]
description = "Automatic CPU speed & power optimizer for Linux"
license = "LGPL-3.0"
repository = "https://github.com/Zamanhuseyinli/auto-cpufreq-rust"
keywords = ["cpu", "power", "optimization", "linux", "daemon"]
categories = ["command-line-utilities", "hardware-support"]
readme = "README.md"

[[bin]]
name = "auto-cpufreq"
path = "src/bin/auto_cpufreq.rs"

[[bin]]
name = "auto-cpufreq-gtk"
path = "src/bin/auto_cpufreq_gtk.rs"
required-features = ["gui"]

[[bin]]
name = "auto-cpufreq-tray"
path = "src/bin/auto_cpufreq_tray.rs"
required-features = ["gui"]

[lib]
name = "auto_cpufreq"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
ini = "1.3"
lazy_static = "1.4"
notify = "6.1"
sysinfo = "0.30"
nix = { version = "0.27", features = ["user"] }
num_cpus = "1.16"
chrono = "0.4"
open = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
configparser = "1.0"

glib = { version = "0.18", optional = true }
gio = { version = "0.18", optional = true }
gtk = { version = "0.7", package = "gtk4", optional = true }
gdk = { version = "0.7", package = "gdk4", optional = true }
gdk-pixbuf = { version = "0.18", optional = true }
ksni = "0.2"

[features]
default = []
gui = ["gtk", "gdk", "gdk-pixbuf", "glib", "gio"]


[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
codegen-units = 256

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = true
debug = false

[profile.release-size]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = true

[profile.release.package.sysinfo]
opt-level = 3
codegen-units = 1

[profile.release.package.nix]
opt-level = 3
codegen-units = 1

[profile.dev.package."*"]
opt-level = 2

